<resources>
    <string name="app_name">cportal</string>

    <!-- 商城 -->
    <string name="portal_store_hint">发现好货 东京优品</string>
    <string name="portal_store_yizhanshigouqi">一站式购齐</string>
    <string name="portal_store_jisuduihuan">极速兑换</string>
    <string name="portal_store_zhengpinbaozhang">正品保障</string>
    <string name="portal_store_my_maobi">我的猫币</string>
    <string name="portal_store_maobi_buy">猫币购买</string>
    <string name="portal_store_maobi_sale">猫币出售</string>
    <string name="portal_store_neiku_manager">内库管理</string>
    <string name="portal_store_title_newcome">新人专属</string>
    <string name="portal_store_item_convertnum">%s 人购买</string>

    <!-- 首页 -->
    <string name="portal_store">商城</string>
    <string name="portal_home">Home</string>
    <string name="portal_gift">礼品</string>
    <string name="portal_my">我的</string>
    <string name="portal_gathole">猫屋</string>


    <!--我的 -->
    <string name="portal_my_cat_currency">猫币(g)</string>
    <string name="portal_my_balance">余额(¥)</string>
    <string name="portal_my_today_read_time">今日阅读(min)</string>
    <string name="portal_my_tools">思文小工具</string>
    <string name="portal_my_gift_convert">礼品兑换</string>
    <string name="portal_my_account_recharge">账户充值</string>
    <string name="portal_my_cat_currency_recharge">猫币充值</string>
    <string name="portal_my_cat_currency_sale">猫币出售</string>
    <string name="portal_my_sale">我的出售</string>
    <string name="portal_my_cat_currency_convert">猫币兑换</string>
    <string name="portal_my_release">我的发布</string>
    <string name="portal_my_comment">我的评论</string>
    <string name="portal_my_grade">我的修为</string>
    <string name="portal_my_collect">我的藏品</string>
    <string name="portal_my_gather_cat_currency">攒猫币</string>

    <!-- 登陆 -->
    <string name="portal_login_edit_username_hint">请输入用户名</string>
    <string name="portal_login_edit_psw_hint">请输入密码</string>
    <string name="portal_login_text_forget_psw">忘记密码</string>
    <string name="portal_login_text_remember_psw">记住密码</string>
    <string name="portal_login_text_register">注册</string>
    <string name="portal_login_text_login">登陆</string>
    <string name="portal_login_error">登陆失败:%s</string>
    <string name="portal_login_success">登陆成功</string>



    <!-- 注册 -->
    <string name="portal_register_title">注册</string>
    <string name="portal_register_getphonetoken_ok">获取验证码成功:%s</string>
    <string name="portal_register_warr_edit_phone_first">请先正确填写手机号码</string>
    <string name="portal_register_phone_submit_error">手机号验证失败:%s</string>
    <string name="portal_register_psw_submit_error">注册失败:%s</string>
    <string name="portal_register_phone_submit_success">手机号验证成功，请进行下一步操作</string>
    <string name="portal_register_psw_submit_success">注册成功</string>
    <string name="portal_register_psw_title">密码设置</string>

    <!-- 隐私用户协议 -->
    <string name="portal_privacy_title">隐私协议</string>

</resources>
